--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container-fluid text-light" id="home-banner">
-    <div class="banner-content">
+    <div class="banner-content pt-4">
         <h1 class="text-dark">Welcome to E Learning</h1>
     </div>
 </div>
