--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,53 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Blog website</title>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>E learning</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="all,follow">
+    <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.violet.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.fontastic.css') }}">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Gabriela&family=Kaushan+Script&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-</head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-custom bg-light">
-  <a class="navbar-brand" href="{{ url_for('main.index') }}">E <span class="logo-title">Learning</span></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link nav-link-custom" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
-      <ul class="nav navbar-nav navbar-right pr-5">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle nav-link-custom pt-3" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        {% if current_user.is_authenticated %}
-            {{ current_user.username }}
-        {% else %}
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Sign in</a></li>
-        {% endif %}
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <i class="dropdown-item fa fa-sign-out">&nbsp;<a href="{{url_for('auth.logout')}}">Sign out</a></i>
-          <div class="dropdown-divider"></div>
-          <i class="dropdown-item fa fa-cog">&nbsp;<a href="#">Setting</a></i>
+  </head>
+  <body>
+    <!-- Side Navbar -->
+    <nav class="side-navbar">
+      <div class="side-navbar-wrapper">
+        <!-- Sidebar Header    -->
+        <div class="sidenav-header d-flex align-items-center justify-content-center">
+          <!-- User Info-->
+            {% if current_user.is_authenticated %}
+            <div class="sidenav-header-inner text-center"><i class="fa fa-user"></i>
+            <h2 class="h5">{{ current_user.username }}</h2><span>Student</span>
+              {% endif %}
+          </div>
+          <!-- Small Brand information, appears on minimized sidebar-->
+          <div class="sidenav-header-logo"><a href="index.html" class="brand-small text-center"> <strong>B</strong><strong class="text-primary">D</strong></a></div>
         </div>
-      </li>
-      </ul>
-  </div>
-</nav>
+        <!-- Sidebar Navigation Menus-->
+        <div class="main-menu">
+          <h5 class="sidenav-heading">Main</h5>
+          <ul id="side-main-menu" class="side-menu list-unstyled">
+            <li><a href="index.html"> <i class="fa fa-home"></i>Home</a></li>
+            <li><a href="/"> <i class="fa fa-book"></i>Books</a></li>
+            <li><a href="/"> <i class="fa fa-users"></i>Students</a></li>
+            <li><a href="/"> <i class="fa fa-users"></i>Teachers</a></li>
+            <li><a href="/"> <i class="fa fa-users"></i>Parents Management</a></li>
+            <li><a href="/"> <i class="fa fa-calendar"></i>Attendance</a></li>
+            <li><a href="/"> <i class="fa fa-graduation-cap"></i>Exams</a></li>
+            <li><a href="/"> <i class="fa fa-book"></i>Library</a></li>
+            <li><a href="/"> <i class="fa fa-car"></i>transport</a></li>
+            <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="fa fa-users fa-caret"></i>Example dropdown </a>
+              <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
+                <li><a href="#">Page</a></li>
+                <li><a href="#">Page</a></li>
+                <li><a href="#">Page</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="page">
+      <!-- navbar-->
+      <header class="header">
+        <nav class="navbar">
+          <div class="container-fluid">
+            <div class="navbar-holder d-flex align-items-center justify-content-between">
+              <div class="navbar-header"><a id="toggle-btn" href="#" class="menu-btn"><i class="fa fa-bars"> </i></a><a href="index.html" class="navbar-brand">
+                  <div class="brand-text d-none d-md-inline-block"><span>E Learning</span></div></a></div>
+              <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
+                <!-- Profile dropdown    -->
+                  {% if current_user.is_authenticated %}
+                      <li class="nav-item dropdown"><a id="languages" rel="nofollow" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link language dropdown-toggle"><span>{{ current_user.username }}</span></a>
+                    {% else %}
+                        <li><a href="{{ url_for('auth.login') }}">Sign in</a></li>
+                    {% endif %}
+                  <ul aria-labelledby="languages" class="dropdown-menu">
+                    <li><a rel="nofollow" href="#" class="dropdown-item"><span>Profile</span></a></li>
+                    <li><a rel="nofollow" href="{{url_for('auth.logout')}}" class="dropdown-item"> <span>Logout</span></a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
 
-{% block content %}
+    {% block content %}
 
-{% endblock %}
+    {% endblock %}
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <footer class="main-footer">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-6">
+              <p>Copyright &copy; 2020 | E learning</p>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
